--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>Angular 2 With Webpack</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <my-app>Loading...</my-app>
